# vehicle

./: CMakeLists.txt  README.md  codegen.sh  import.sh
debian/: control
example/: ublox_receiver.cpp
include/automy/vehicle/: GPIO_PPS_Receiver.h  UbloxReceiver.h
include/vehicle/: GPIO_PPS_Receiver.h  UbloxReceiver.h
interface/: GPS_Info.vni  IMU_Info.vni  Odometry.vni  PPS_Signal.vni  UBX_Packet.vni  VehicleDimensions.vni  VehicleInfo.vni  WheelSpeed.vni
modules/: GPIO_PPS_Receiver.vni  UbloxReceiver.vni
src/: GPIO_PPS_Receiver.cpp  UbloxReceiver.cpp  ublox_structures.h
